--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,3 +2,13 @@ user_001:
   id: 1
   email: test@test.com
   encrypted_password: <%= User.new.send(:password_digest, '123456') %>
+
+user_002:
+  id: 2
+  email: test1@test.com
+  encrypted_password: <%= User.new.send(:password_digest, '123456') %>
+
+user_003:
+  id: 3
+  email: test2@test.com
+  encrypted_password: <%= User.new.send(:password_digest, '123456') %>
