--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,3 +12,8 @@ user_003:
   id: 3
   email: test2@test.com
   encrypted_password: <%= User.new.send(:password_digest, '123456') %>
+
+user_004:
+  id: 4
+  email: test3@test.com
+  encrypted_password: <%= User.new.send(:password_digest, '123456') %>
