--- a/test/fixtures/friend_requests.yml
+++ b/test/fixtures/friend_requests.yml
@@ -3,8 +3,13 @@ request_001:
   creator_id: 1
   friend_id: 3
 
-request_001:
+request_002:
   id: 2
   creator_id: 1
   friend_id: 4
+
+request_003:
+  id: 3
+  creator_id: 2
+  friend_id: 1
 
