--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -18,5 +18,6 @@ user_003:
 
 user_004:
   id: 4
-  email: test3@test.com
+  name: 'name'
+  email: test6@test.com
   encrypted_password: <%= User.new.send(:password_digest, '123456') %>
